收集数据的6个函数移到DataCollecting.py 获取样本的List<Case>、获取训练集和测试集的List<Case> 函数在DataCollecting.py

--- a/说明.md
+++ b/说明.md
@@ -1,6 +1,7 @@
 - averageTime的单位是分钟
 - case对象转换成list，顺序为averageDeduction, averageLineNum, averageTime, averageUploadNum, cheatRatio, incompleteRatio
 - utils.py中是工具函数
+- 收集数据的函数在DataCollecting.py
 - do_pca返回PcaModal，是训练好的模型
     - transform方法可以转换新数据
         - 返回降维后的矩阵和综合评分的list
