下一阶段的说明

--- a/说明.md
+++ b/说明.md
@@ -7,3 +7,20 @@
         - 返回降维后的矩阵和综合评分的list
         - 可传入List<Case>
         - 可传入6列矩阵X与case_id_list
+- 题目的类型有
+    - 字符串
+    - 数组
+    - 树
+    - 图
+    - 排序
+    - 数字操作
+    - 查找算法
+    - 线性表
+    
+- 输入一道题，输出难度值、绝对难度、类型、相对难度
+    - 注意要包装成list    
+    
+dict 键：类型 值：两个
+overall 两个变量
+
+   
