--- a/说明.md
+++ b/说明.md
@@ -1,3 +1,9 @@
+# 前置条件
+1. 运行DownLoad&Unzip.py，把代码文件下载下来，保存在data文件夹
+2. 运行DataCollecting，把收集到的所有Case对象序列化，保存在AllCaseObjs文件
+3. 运行SaveTrainingData，把对训练集pca后对结果，包括综合评分res，降维后对矩阵U，训练好对模型pcaModel序列化，保存在TrainingResult文件
+
+# 说明
 - averageTime的单位是分钟
 - case对象转换成list，顺序为averageDeduction, averageLineNum, averageTime, averageUploadNum, cheatRatio, incompleteRatio
 - utils.py中是工具函数
@@ -7,6 +13,9 @@
         - 返回降维后的矩阵和综合评分的list
         - 可传入List<Case>
         - 可传入6列矩阵X与case_id_list
+    - 训练集返回的内容已序列化保存在文件中
+    - 想要使用训练好的模型，调用SaveTrainingResult.py中的deserialize_training_result函数
+        
 - 题目的类型有
     - 字符串
     - 数组
