集中初始化 请运行Before.py
为什么不能在DataCollecting.py里序列化：
如果在该类定义的模块序列化，其他模块反序列化时会找不到定义，得import这个类。
在本模块中序列化，序列化后的开头为"c__main__"，在其他模块中反序列化后也以为在自己的__main__里，就会报找不到属性，得import。
在其他模块中序列化，序列化后的开头为"c"+类所在的模块的名称，知道去哪里找。

--- a/说明.md
+++ b/说明.md
@@ -1,9 +1,7 @@
-# 前置条件
-1. 运行DownLoad&Unzip.py，把代码文件下载下来，保存在data文件夹
-2. 运行DataCollecting，把收集到的所有Case对象序列化，保存在AllCaseObjs文件
-    - 其他py文件里只要直接或间接反序列化AllCaseObjs文件，就要from DataCollecting import Case，不然AttributeError
-    - 反序列化的函数是deserialize_all_case_objs()
-3. 运行SaveTrainingData，把对训练集pca后对结果，包括综合评分res，降维后对矩阵U，训练好对模型pcaModel序列化，保存在TrainingResult文件
+# 前置条件 运行Before.py
+1. DownLoad&Unzip.py，把代码文件下载下来，保存在data文件夹
+2. DataCollecting，把收集到的所有Case对象序列化，保存在AllCaseObjs文件
+3. SaveTrainingData，把对训练集pca后对结果，包括综合评分res，降维后对矩阵U，训练好对模型pcaModel序列化，保存在TrainingResult文件
 
 # 说明
 - averageTime的单位是分钟
